# wol-sender

./: .editorconfig  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
wol_sender/: __init__.py  cli.py  main.py
