[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wol_sender"
description = "WOL API server & CLI"
dynamic = ["version", "readme"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
	"click==8.1.7",
]

[project.scripts]
wol-sender = "wol_sender.cli:cli"

[tool.setuptools.packages.find]
exclude = ["test*", "venv*"]

[tool.setuptools.package-data]
wol_sender = ["*.txt", "*.md"]

[tool.setuptools.dynamic]
version = {attr = "wol_sender.__version__"}
readme = {file = ["README.md"]}

[tool.distutils.bdist_wheel]
universal = true
