[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wol_sender"
description = "WOL API server & CLI"
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
	"click==8.1.7",
	"fastapi==0.104.1",
	"uvicorn==0.24.0",
	"wakeonlan==3.1.0",
]

[project.scripts]
wol-sender = "wol_sender.cli:cli"

##### Hatch

[tool.hatch.version]
path = "wol_sender/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["test*", "venv*"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.envs.default]
dependencies = ["ipdb"]

[tool.hatch.envs.test]
dependencies = [
	"pytest",
	"pytest-sugar",
	"pytest-mypy",
]

[tool.hatch.envs.test.scripts]
test = "pytest --disable-pytest-warnings test"
mypy = "pytest --mypy wol_sender"

[tool.hatch.envs.lint]
detached = true  # do not install package
dependencies = [
	"pylint",
]

[tool.hatch.envs.lint.scripts]
lint = "pylint wol_sender"
